syntax = "proto3";

import "google/api/annotations.proto";

service Greeter {
  rpc Healthcheck(HealthRequest) returns (HealthResponse) {
    option (google.api.http) = {
      get: "/healthcheck"
    };
  }

  rpc SayWord(MyMessage) returns (MyMessage) {
    option (google.api.http) = {
      get: "/v1/helloworld/say"
    };
  }
}

message HealthRequest{}

message HealthResponse {
  string status = 1;
}

message MyMessage {
  string requestId = 1;
  string text = 2;
}
